	  should not be conditioned on CONFIG_ARCH_LEDs being defined!
	* arch/arm/src/lpc313x/ - APB0 and APB1 cannot lie in different
	  sections; they are too close together.
	* arch/arm/src/lpc313x/lpc13x_boot.c - Resetting all of the clocking
	  had a side effect of wiping out the first 6 words of memory where the
	  interrupt vectors are located (and also not resetting the fractional
	  dividers).  This is not usually noticeable because the IRQ vectors
	  are after this point, but really causes problems if you want to handle
	  data and prefectch aborts which are within this zeroed region.

5.11 2010-10-01 Gregory Nutt <spudmonkey@racsa.co.cr>

	* configs/ea3131/src/up_fillpage.c - Added new configuration item
	  CONFIG_PAGING_BINPATH.  If CONFIG_PAGING_BINPATH is defined, then it
	  is the full path to a file on a mounted file system that contains
	  a binary image of the NuttX executable.  Pages will be filled by
	  reading from offsets into this file that correspond to virtual
	  fault addresses.  up_fillpage.c implements logic to perform page
	  files using the CONFIG_PAGING_BINPATH file.
	* configs/mbed - Add configuration to support the mbed.org LPC1768
	  board (Contributed by Dave Marples).
	* sched/sem_wait.c and sem_waitirq.c - Eliminate a race condition
	  that can occur when a semaphore wait is interrupt by a signal.
	  (see email thread: http://tech.groups.yahoo.com/group/nuttx/message/530)
	* drivers/mtd/at45db.c - Add a driver for the Atmel AT45DB161D 4Mbit
	  SPI FLASH part (untested on initial check-in).
	* arch/arm/src/lm3s and arch/arm/include/lm3s - Corrections for the
	  lm3s8962 port contributed by Larry Arnold.  That port is purported
	  to work correctly with these changes in place.
	* examples/ostest/prioinherit.c - Need to reinitialize globals if
	  test is ran repeatedly in a loop.
	* configs/ez80f910200zco - Updated to used ZDS-II 4.11.1

5.12 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
